repo api consumed

--- a/Frontend/portfolio project/index.html
+++ b/Frontend/portfolio project/index.html
@@ -28,6 +28,11 @@
         <input type="text" placeholder="your github username" id="anonUsername">
         <button>Check</button>
     </form>
+    <hr>
+    <section class="repos">
+        <!-- this section will be filled with js -->
+    </section>
+
 <script src="./js/portfolio.js"></script>
 </body>
 </html>
