--- a/Frontend/portfolio project/index.html
+++ b/Frontend/portfolio project/index.html
@@ -22,17 +22,23 @@
             <h2 id="bio"></h2>
             <h4 id="repos"></h4>
         </div>
+        <a href="#projects" class="downArrow">-></a>
     </header>
+
     <form class="input">
         <label for="anonUsername">Create your Portfolio</label>
         <input type="text" placeholder="your github username" id="anonUsername">
         <button>Check</button>
     </form>
     <hr>
+    <div id="projects" class="repoContainer"><h2>My Github Repos</h2> 
     <section class="repos">
         <!-- this section will be filled with js -->
     </section>
-
+</div>
+<footer class="footer">
+    &copy; Bhuwan Panta
+</footer>
 <script src="./js/portfolio.js"></script>
 </body>
 </html>
