--- a/Frontend/portfolio project/index.html
+++ b/Frontend/portfolio project/index.html
@@ -22,7 +22,7 @@
             <h2 id="bio"></h2>
             <h4 id="repos"></h4>
         </div>
-        <a href="#projects" class="downArrow">-></a>
+        <a href="#projects" class="downArrow">></a>
     </header>
 
     <form class="input">
@@ -31,11 +31,7 @@
         <button>Check</button>
     </form>
     <hr>
-<<<<<<< HEAD
-    <div class="repoContainer"><h2>My Github Repos</h2> </div>
-=======
     <div id="projects" class="repoContainer"><h2>My Github Repos</h2> 
->>>>>>> PortfolioProject
     <section class="repos">
         <!-- this section will be filled with js -->
     </section>
